tweaking file extensions

--- a/oil.html
+++ b/oil.html
@@ -6,15 +6,22 @@
   <title>alistair gibson oil</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/index.css">
 
   <script src="https://kit.fontawesome.com/e417cd4a72.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
@@ -23,7 +30,8 @@
 
       <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html">alistair gibson</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -33,7 +41,8 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
                 paintings
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -55,32 +64,41 @@
 
     <div class="row">
       <div class="column">
-        <img class="grid-img myImages" id="myImg" src="images/A View of Delft-Patterns in the Streets.jpg" alt="A View of Delft-Patterns in the Streets">
-        <img class="grid-img myImages" id="myImg" src="images/Acid test.jpg" alt="Acid Test">
-        <img class="grid-img myImages" id="myImg" src="images/Still Life Navels and Minneolas.jpg" alt="Still Life Navels and Minneolas">
+        <img class="grid-img myImages" id="myImg" src="images/A View of Delft-Patterns in the Streets.JPG"
+          alt="A View of Delft-Patterns in the Streets">
+        <img class="grid-img myImages" id="myImg" src="images/Acid test.JPG" alt="Acid Test">
+        <img class="grid-img myImages" id="myImg" src="images/Still Life Navels and Minneolas.JPG"
+          alt="Still Life Navels and Minneolas">
         <img class="grid-img myImages" id="myImg" src="images/C&G 1.jpg" alt="C&G 1">
-        <img class="grid-img myImages" id="myImg" src="images/A Bristol Skyline- Dangerous Heights bring great rewards.jpg" alt="A Bristol Skyline-Dangerous Heights">
+        <img class="grid-img myImages" id="myImg"
+          src="images/A Bristol Skyline- Dangerous Heights bring great rewards.JPG"
+          alt="A Bristol Skyline-Dangerous Heights">
       </div>
       <div class="column">
         <img class="grid-img myImages" id="myImg" src="images/C&G 3.jpg" alt="C&G 3">
-        <img class="grid-img myImages" id="myImg" src="images/Still Life Minneolas with an apple.jpg" alt="Still Life Minneolas with and Apple">
+        <img class="grid-img myImages" id="myImg" src="images/Still Life Minneolas with an apple.JPG"
+          alt="Still Life Minneolas with and Apple">
         <img class="grid-img myImages" id="myImg" src="images/Waiting To Cross.jpg" alt="Waiting to Cross">
-        <img class="grid-img myImages" id="myImg" src="images/A view of Delft- Orange roofs are a beautiful thing.jpg" alt="A View of Delft-Orange Roofs are a Beautiful Thing">
+        <img class="grid-img myImages" id="myImg" src="images/A view of Delft- Orange roofs are a beautiful thing.JPG"
+          alt="A View of Delft-Orange Roofs are a Beautiful Thing">
         <img class="grid-img myImages" id="myImg" src="images/C&G 4.jpg" alt="C&G 4">
       </div>
       <div class="column">
-        <img class="grid-img myImages" id="myImg" src="images/A view of Delft- shapes crafted by streets.jpg" alt="A View of Delft-Shapes Crafted by Streets">
+        <img class="grid-img myImages" id="myImg" src="images/A view of Delft- shapes crafted by streets.JPG"
+          alt="A View of Delft-Shapes Crafted by Streets">
         <img class="grid-img myImages" id="myImg" src="images/C&G 5.jpg" alt="C&G 5">
-        <img class="grid-img myImages" id="myImg" src="images/Still life Minneolas.jpg" alt="Still Life Minneolas">
+        <img class="grid-img myImages" id="myImg" src="images/Still life Minneolas.JPG" alt="Still Life Minneolas">
         <img class="grid-img myImages" id="myImg" src="images/C&G 6.jpg" alt="C&G 6">
-        <img class="grid-img myImages" id="myImg" src="images/a view of delft- The Houses Converge.jpg" alt="A View of Delft-The Houses Converge">
+        <img class="grid-img myImages" id="myImg" src="images/a view of delft- The Houses Converge.JPG"
+          alt="A View of Delft-The Houses Converge">
       </div>
       <div class="column">
-        <img class="grid-img myImages" id="myImg" src="images/Frustration.jpg" alt="Frustration">
+        <img class="grid-img myImages" id="myImg" src="images/Frustration.JPG" alt="Frustration">
         <img class="grid-img myImages" id="myImg" src="images/C&G 7.jpg" alt="C&G 7">
-        <img class="grid-img myImages" id="myImg" src="images/A cascade of Houses.jpg" alt="A Cascade of Houses">
+        <img class="grid-img myImages" id="myImg" src="images/A cascade of Houses.JPG" alt="A Cascade of Houses">
         <img class="grid-img myImages" id="myImg" src="images/C&G 8.jpg" alt=" C&G 8">
-        <img class="grid-img myImages" id="myImg" src="images/A bristol Skyline- Pink walls and Dirty Roofs.jpg" alt="A Bristol Skyline-Pink Walls and Dirty Roofs">
+        <img class="grid-img myImages" id="myImg" src="images/A bristol Skyline- Pink walls and Dirty Roofs.JPG"
+          alt="A Bristol Skyline-Pink Walls and Dirty Roofs">
       </div>
     </div>
 
