missed two images fixed now

--- a/about.html
+++ b/about.html
@@ -1,84 +1,107 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>alistair gibson about</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/index.css">
+<head>
+  <meta charset="utf-8">
+  <title>alistair gibson about</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oxygen&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/e417cd4a72.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/index.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </head>
-  <body>
+  <script src="https://kit.fontawesome.com/e417cd4a72.js"></script>
 
-<section>
-  <div class="container-fluid">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+</head>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html">alistair gibson</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<body>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              paintings
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="stencil.html">stencil</a>
-              <a class="dropdown-item" href="oil.html">oil</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">about</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">contact</a>
-          </li>
-        </ul>
-
-      </div>
-    </nav>
-  </div>
-
-<div class="about-grid">
-  <div class="about-text">
-<h1 class="about-heading">About Me</h1>
-<p>Exeter based artist originally trained as an oil painter in university the more traditional still life work I was doing began to feel stale and after moving to Bristol around 7 years ago I started experimenting with spray paint. Initially I started out working with very simple stencils but diving into the complicated process of cutting tiny holes in paper grabbed my attention and focus like nothing previously.
- For a long time my work had been concerned with elements of pattern within the stencils painting images of birds because of the way they lent themselves to this. Over the last year and half however I have moved back to a city scenes a subject that I worked with a lot in my oil paintings. My main concern with these works is looking at the city I now call home trying to find some of the beauty  that I feel like people overlook. As well as this I am exploring the blending of detailed stencil work to highlight the focal points of the piece as well as large loose acrylic painting bringing a semi abstract quality to areas of the images.</p>
- <br>
- <p>I have recently moved to exeter and due to home circumstances I'm temporarily not working with spray paint this change is going to lead to some more traditional work that in tandem with the wonderful countryside on my doorstep so look out for that.</p>
-  </div>
-
-  <div class="about-image">
-    <div class="about-image-flex">
-      <img class="about-page-image" src="images/A View of Delft-Patterns in the Streets.jpg" alt="A View of Delft-Patterns in the Streets">
-    </div>
-  </div>
-
-  <div class="footer">
+  <section>
     <div class="container-fluid">
 
-      <i class="footer-icon fab fa-twitter"></i>
-      <i class="footer-icon fab fa-facebook-f"></i>
-      <i class="footer-icon fab fa-instagram"></i>
-      <i class="footer-icon fas fa-envelope"></i>
-      <p>© Copyright 2019 Alistair Gibson</p>
-    </div>
-  </div>
-</div>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">alistair gibson</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-</section>
-  </body>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                paintings
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="stencil.html">stencil</a>
+                <a class="dropdown-item" href="oil.html">oil</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">about</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">contact</a>
+            </li>
+          </ul>
+
+        </div>
+      </nav>
+    </div>
+
+    <div class="about-grid">
+      <div class="about-text">
+        <h1 class="about-heading">About Me</h1>
+        <p>Exeter based artist originally trained as an oil painter in university the more traditional still life work I
+          was doing began to feel stale and after moving to Bristol around 7 years ago I started experimenting with
+          spray paint. Initially I started out working with very simple stencils but diving into the complicated process
+          of cutting tiny holes in paper grabbed my attention and focus like nothing previously.
+          For a long time my work had been concerned with elements of pattern within the stencils painting images of
+          birds because of the way they lent themselves to this. Over the last year and half however I have moved back
+          to a city scenes a subject that I worked with a lot in my oil paintings. My main concern with these works is
+          looking at the city I now call home trying to find some of the beauty that I feel like people overlook. As
+          well as this I am exploring the blending of detailed stencil work to highlight the focal points of the piece
+          as well as large loose acrylic painting bringing a semi abstract quality to areas of the images.</p>
+        <br>
+        <p>I have recently moved to exeter and due to home circumstances I'm temporarily not working with spray paint
+          this change is going to lead to some more traditional work that in tandem with the wonderful countryside on my
+          doorstep so look out for that.</p>
+      </div>
+
+      <div class="about-image">
+        <div class="about-image-flex">
+          <img class="about-page-image" src="images/A View of Delft-Patterns in the Streets.JPG"
+            alt="A View of Delft-Patterns in the Streets">
+        </div>
+      </div>
+
+      <div class="footer">
+        <div class="container-fluid">
+
+          <i class="footer-icon fab fa-twitter"></i>
+          <i class="footer-icon fab fa-facebook-f"></i>
+          <i class="footer-icon fab fa-instagram"></i>
+          <i class="footer-icon fas fa-envelope"></i>
+          <p>© Copyright 2019 Alistair Gibson</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+</body>
+
 </html>
